--- a/pyx/lts/createlts.tex
+++ b/pyx/lts/createlts.tex
@@ -1,3 +1,23 @@
+% Copyright (C) 2002 Jörg Lehmann <joergl@users.sourceforge.net>
+% Copyright (C) 2002 André Wobst <wobsta@users.sourceforge.net>
+%
+% This file is part of PyX (http://pyx.sourceforge.net/).
+%
+% PyX is free software; you can redistribute it and/or modify
+% it under the terms of the GNU General Public License as published by
+% the Free Software Foundation; either version 2 of the License, or
+% (at your option) any later version.
+%
+% PyX is distributed in the hope that it will be useful,
+% but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details.
+%
+% You should have received a copy of the GNU General Public License
+% along with PyX; if not, write to the Free Software
+% Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307
+% USA
+
 \endlinechar=-1 % don't add tailing space while \read
 
 \message{latex style name (e.g. 12ptex)? }
@@ -10,18 +30,17 @@
 \read-1 to\latexclassopt
 
 \message{initial commands (e.g. \string\usepackage\string{exscale\string})? }
-\read-1 to\texinit
+\read-1 to\latexinit
 
 \endlinechar=13
 
 \newwrite\myfile
-\immediate\openout\myfile=\latexstylename.lts
 
 \newbox\mybox
 
 \documentclass[\latexclassopt]{\latexclassname}
 
-\texinit
+\latexinit
 
 \newcommand{\writefontsize}[1]{
   \setbox\mybox=\hbox{#1
@@ -60,6 +79,12 @@
 }
 
 \begin{document}
+\immediate\openout\myfile=\latexstylename.lts
+{\catcode`\%=12\immediate\write\myfile{% This automatically generated file is part of PyX (http://pyx.sourceforge.net/).}}
+{\catcode`\%=12\immediate\write\myfile{% \string\latexstylename="\expandafter\string\latexstylename"}}
+{\catcode`\%=12\immediate\write\myfile{% \string\latexclassname="\expandafter\string\latexclassname"}}
+{\catcode`\%=12\immediate\write\myfile{% \string\latexclassopt="\expandafter\string\latexclassopt"}}
+{\catcode`\%=12\immediate\write\myfile{% \string\latexinit="\expandafter\string\latexinit"}}
 \writefontsize{\tiny}
 \writefontsize{\scriptsize}
 \writefontsize{\footnotesize}
@@ -70,6 +95,5 @@
 \writefontsize{\LARGE}
 \writefontsize{\huge}
 \writefontsize{\Huge}
-\end{document}
-
 \immediate\closeout\myfile
+\end{document}
