--- a/pyx/lts/createlts.tex
+++ b/pyx/lts/createlts.tex
@@ -15,8 +15,7 @@
 %
 % You should have received a copy of the GNU General Public License
 % along with PyX; if not, write to the Free Software
-% Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307
-% USA
+% Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 \endlinechar=-1 % don't add tailing space while \read
 
