*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@183 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/design/arg.tex
+++ b/design/arg.tex
@@ -111,8 +111,8 @@ of PostScript it need to be considered anyway, because the first
 parameter usually provides PostScript as well as a bounding box
 information unless we do a property change as first and only
 parameter.} When this flavour of the property arguments is undesirable
-its use should just be prohibited.\footnote{what about the \TeX/\LaTeX
-interface}
+its use should just be prohibited.\footnote{what about the
+\TeX/\LaTeX{} interface}
 
 You may miss the correct handling of the closing tags \verb|</>| in
 the last example, but that's a question about the output needed.
@@ -122,17 +122,17 @@ To summarize the description above, typical design features of
 \verb|arglist|-type functions and arguments are:
 
 \begin{itemize}
-\item[+]
+\item[$+$]
 properties can just implement what they want --- the evaluation by
 function calls makes it most flexible
-\item[+]
+\item[$+$]
 property implementations are small and well separated
-\item[+]
+\item[$+$]
 properties can have additional functionality --- they may are
 comparable, incrementable, etc.
-\item[+]
+\item[$+$]
 organization of properties can be done within a class tree
-\item[-]
+\item[$-$]
 classes are needed construct all the different properties which leads
 to a bloat up in the namespaces
 \end{itemize}
@@ -144,8 +144,8 @@ Those
 To summarize the description above, typical design features of
 \verb|argdict|-type functions and arguments are:
 \begin{itemize}
-\item[+]pro
-\item[-]contra
+\item[$+$]pro
+\item[$-$]contra
 \end{itemize}
 
 \end{document}
