fixed buglet in LaTeX file
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@185 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/design/arg.tex
+++ b/design/arg.tex
@@ -264,8 +264,8 @@ And actually, this should be the solution of choice. Similar to the
 idea already discussed above, we could thought of a mechanism of
 making the parameter \verb|opt| of the constructor of \verb|genpart|
 directly available as a parameter of the constructor of \verb|axis|.
-Instead of writing something like \verb|axis(part = genpart(opt =
-15))| we could desire a syntax \verb|axis(opt = 15)|. While it is
+Instead of writing something like \verb|axis(part = genpart(opt = 15))| 
+we could desire a syntax \verb|axis(opt = 15)|. While it is
 again a charming idea, it finally would generate a lot of trouble.
 
 To summarize the description above, typical design features of
