*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@319 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/tex.tex
+++ b/manual/tex.tex
@@ -126,7 +126,7 @@ class \texttt{tex.latex}&&\\
 \texttt{docclass}&\texttt{"article"}&specify the document class\\
 \texttt{docopt}&\texttt{None}&specifies options to the document class\\
 \texttt{auxfilename}&\texttt{None}&Specifies a filename for storing the \LaTeX{}
-\verb|aux| file. This is needed when using labels and references.\\
+\texttt{aux} file. This is needed when using labels and references.\\
 \end{tabularx}
 
 \subsection{Examples}
