added canvas chapter
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@330 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -11,6 +11,7 @@ Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \tableofcontents
 \include{intro}
 \include{unit}
+\include{canvas}
 \include{tex}
 \include{color}
 \appendix
