--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -7,7 +7,7 @@
 The basic module for the PostScript access in \PyX{} is named
 \verb|canvas|. Its main purpose is to provide the class \verb|canvas|,
 which presents a collection of visual elements like paths, other
-canvases, \TeX or \LaTeX elements. Eventually the contents of a canvas 
+canvases, \TeX{} or \LaTeX{} elements. Eventually the contents of a canvas 
 can be written to a (E)PS file to produce the desired output.
 
 \subsection{Basic usage}
