--- a/manual/color.tex
+++ b/manual/color.tex
@@ -13,8 +13,12 @@ versions at least for checking color identity and for ordering grey
 colors.
 
 \section{Color classes}
+There is a class for each of the supported color models, namely
+\verb|grey|, \verb|rgb|, \verb|cmyk|, and \verb|hsb|.
 
 \section{Color instances}
+Like all attributes, colors are instances of their specific classes.
+The constructors of the color classes take the 
 
 \section{Example}
 \begin{quote}
