*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@353 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -14,6 +14,7 @@ Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \include{canvas}
 \include{tex}
 \include{color}
+\include{graph}
 \appendix
 \include{colorname}
 \end{document}
