- added documentation for path and bpath module
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@363 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -7,7 +7,7 @@
 The basic module for the PostScript access in \PyX{} is named
 \verb|canvas|. Its main purpose is to provide the class \verb|canvas|,
 which presents a collection of visual elements like paths, other
-canvases, \TeX{} or \LaTeX{} elements. Eventually the contents of a canvas 
+canvases, \TeX{} or \LaTeX{} elements. Eventually, the contents of a canvas 
 can be written to a (E)PS file to produce the desired output.
 
 \subsection{Basic usage}
@@ -89,8 +89,8 @@ c.draw(p,
        color.rgb.blue, 
        canvas.earrow.LARge(color.rgb.red,
                            canvas.stroked(canvas.linejoin.round),
-	                                  canvas.filled(color.rgb.green)))
-							      
+                                          canvas.filled(color.rgb.green)))
+                                                              
 \end{verbatim}
 \end{quote}
 This draws the path in blue with a pretty large arrow at the end, the outline
