--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -8,9 +8,12 @@
 \author{J\"org Lehmann \texttt{<joergl@users.sourceforge.net>}\and
 Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \maketitle
+PostScript is a trademark of Adobe Systems Incorporated.
 \tableofcontents
 \include{intro}
 \include{unit}
+\include{path}
+\include{bpath}
 \include{canvas}
 \include{tex}
 \include{color}
